# drone

./: .gitattributes  LICENSE
Analysis/: ApPitch.m  ApYaw.m  AutoPilot.m  Guidance.m  Test.slx  TestYaw.slx  nicholsAnalysis.m  nyquistAnalysis.m
Board/RPI_Board1/: PiDroneBreakout_Preroute.123
FlightSoftware/: CMakeLists.txt
FlightSoftware/Autopilot/: ApBlock.cpp  ApBlock.h  AutoPilot.cpp  AutoPilot.h  CMakeLists.txt
FlightSoftware/Device/: CMakeLists.txt  EnetTmBlock.cpp  EnetTmBlock.h  EthernetControl.cpp  EthernetControl.h  FileTmBlock.cpp  FileTmBlock.h  GpsEnetBlock.cpp  GpsEnetBlock.h  ImuEnetBlock.cpp  ImuEnetBlock.h  MagEnetBlock.cpp  MagEnetBlock.h  MotorEnetBlock.cpp  MotorEnetBlock.h  UDP_Device.cpp  UDP_Device.h
FlightSoftware/Device/FakeInterface/: CMakeLists.txt  Fake_Interface.cpp  Fake_Interface.h
FlightSoftware/Device/GPIO/: CMakeLists.txt  GPIO_Device.cpp  GPIO_Device.h
FlightSoftware/Device/I2C_Device/: CMakeLists.txt  I2C_Device.cpp  I2C_Device.h  I2C_Interface.cpp  I2C_Interface.h
FlightSoftware/Device/I2C_Device/ADXL345/: ADXL345.cpp  ADXL345.h  ADXL345_MemMap.h  ADXL345_MemMap.txt  ADXL345_Settings.h  genMemMap.py
FlightSoftware/Device/I2C_Device/HMC5883L/: HMC5883L.cpp  HMC5883L.h  HMC5883L_MemMap.h  HMC5883L_MemMap.txt  HMC5883L_Settings.h  genMemMap.py
FlightSoftware/Device/I2C_Device/ITG3200/: ITG3200.cpp  ITG3200.h  ITG3200_MemMap.h  ITG3200_MemMap.py  ITG3200_MemMap.txt  ITG3200_Settings.h
FlightSoftware/Device/I2C_Device/MAG3110/: MAG3110.cpp  MAG3110.h  Mag3110_MemMap.h
FlightSoftware/Device/I2C_Device/PCA9685/: PCA9685.cpp  PCA9685.h  PCA9685_MemMap.h
FlightSoftware/Device/Interrupts/: CMakeLists.txt  Interrupt.cpp  Interrupt.h  Interrupt_Interface.cpp  Interrupt_Interface.h
FlightSoftware/Device/Serial/: CMakeLists.txt  Radio_Interface.cpp  Radio_Interface.h  SerialDevice.cpp  SerialDevice.h  Serial_Interface.cpp  Serial_Interface.h
FlightSoftware/Device/Serial/LS20031/: LS20031.cpp  LS20031.h
FlightSoftware/Device/Serial/Radio3dr/: Radio3dr.cpp  Radio3dr.h
FlightSoftware/FlightManager/: CMakeLists.txt  FlightManager.cpp  FlightManager.h  FlightManagerBlock.cpp  FlightManagerBlock.h
FlightSoftware/Guidance/: CMakeLists.txt  Guidance.cpp  Guidance.h  GuidanceBlock.cpp  GuidanceBlock.h
FlightSoftware/HiveMind/: CMakeLists.txt  HiveMind.sln
FlightSoftware/HiveMind/Block/: Block.cpp  Block.h
FlightSoftware/HiveMind/Debug/: HiveMind.ilk
FlightSoftware/HiveMind/HiveMind/: HiveMind.vcproj  main.cpp
FlightSoftware/HiveMind/Message/: Message.cpp  Message.h  MessageTypes.h
FlightSoftware/HiveMind/Publisher/: Hive.cpp  Hive.h  HiveTypes.h
FlightSoftware/HiveMind/UnitTest/: MsgA.cpp  MsgA.h  MsgB.cpp  MsgB.h  TestRcvr.cpp  TestRcvr.h  TestSender.cpp  TestSender.h  TestTypes.h
FlightSoftware/Include/: CMakeLists.txt  ControlConsts.h  Defines.h  Includes.h  Structs.h  Types.h
FlightSoftware/Messages/: AutopilotReportMsg.cpp  AutopilotReportMsg.h  BladeCmdMsg.cpp  BladeCmdMsg.h  CMakeLists.txt  CovMsg.cpp  CovMsg.h  DroneMsgTypes.h  EkfStateMsg.cpp  EkfStateMsg.h  GpsAccelMsg.cpp  GpsAccelMsg.h  GpsPvtMsg.cpp  GpsPvtMsg.h  GuidanceReportMsg.cpp  GuidanceReportMsg.h  GuideMsg.cpp  GuideMsg.h  IdleMotorMsg.cpp  IdleMotorMsg.h  ImuMsg.cpp  ImuMsg.h  LandingMsg.cpp  LandingMsg.h  LiftoffMsg.cpp  LiftoffMsg.h  MagInterrupt.cpp  MagInterrupt.h  MagMsg.cpp  MagMsg.h  Messages.csv  MsgMaker.py  RtbMsg.cpp  RtbMsg.h  StabilityMsg.cpp  StabilityMsg.h  TimerSetupMsg.cpp  TimerSetupMsg.h  Timer_1000HzMsg.cpp  Timer_1000HzMsg.h  (+10 more)
FlightSoftware/Navigator/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  NavBlock.cpp  NavBlock.h  Navigator.cpp  Navigator.h
FlightSoftware/Timers/: CMakeLists.txt  Timer.cpp  Timer.h
FlightSoftware/Tools/: CMakeLists.txt  Controller.cpp  Controller.h  Derivative.h  FIR.cpp  FIR.h  GroundStream.cpp  GroundStream.h  Integrator.h  LookupTable.cpp  LookupTable.h  MyTime.cpp  MyTime.h  NmeaStream.cpp  NmeaStream.h  PID.h  Tools.cpp  Tools.h  XPlatform.cpp  XPlatform.h  XmlUtils.cpp  XmlUtils.h  guilink.cpp  guilink.h  guitmformat.h
Simulation/Scripts/: ComparePlot.m  navPlot.m  rundrone.m  saveAp.m  saveGuide.m  saveKalman.m  writeGuidance.m
Simulation/Simulink/: EthernetDrone.mdl  NavTest.m  drone.mdl  drone_udp.mdl  saveKalman.m
Simulation/Simulink/EKF/: ConstructDcm.m  DroneEom.m  PredictMeasurement.m  PropXf_Eom.m  dcmToQuat.m  linearizeEOM.m  predictMag.m  updateQuat.m
Simulation/Simulink/Test/: Quat.slx  Quat_sfun.mexw64
Simulation/Simulink/Test/EKF/: Ekf_setup.m  PredictMeasurement.m  genLinearized.m  linearizeEOM.m  predictMag.m
Simulation/Tools/: ControllerSetup.m  EkfSetup.m  EkfTest.m  InitialConditions.m  loadTraj.m  plotCov.m
SwTools/: LoadTm.m  PlotTm.m  centroidMag.m  quatToAngle.m
SwTools/EscCalibration/: CMakeLists.txt  main.cpp
SwTools/PythonDeviceExamples/: interruptTest.py  serialTest.py
SwTools/TmTools/: PlotTm.m  plotEkf.m  plotImu.m  plotMagno.m
SwTools/TmTools/FlightTm/: GroundStationPlot.m  derivsPlot.m  ecef2enu.m  enu2ecef.m  orientationPlot.m  q2rpy.m  translationPlot.m
